# breeze

./: .gitignore  LICENSE  README.md  pubspec.yaml
.cargo/: config.toml
docs/: ARCHITECTURE.md  BUILDING.md
installer/: breeze.iss
integration_test/: input_test.dart  simple_test.dart  transcription_test.dart
lib/: main.dart
lib/src/l10n/: strings.dart
lib/src/notifications/: notifier.dart
rust/: Cargo.toml
rust/src/: frb_generated.rs  lib.rs  logging.rs  paths.rs
rust/src/api/: config.rs  cuda.rs  input.rs  instance.rs  mod.rs  orchestrator.rs  overlay.rs  simple.rs  theme.rs  transcription.rs  winprobe.rs
rust/src/audio/: convert.rs  mod.rs
rust/src/clipboard/: mod.rs
rust/src/config/: mod.rs
rust/src/hotkey/: mod.rs  state.rs
rust/src/inject/: mod.rs
rust/src/model/: mod.rs
rust/src/orchestrator/: logic.rs  mod.rs  runtime.rs
rust/src/theme/: mod.rs
rust/src/whisper_engine/: mod.rs
rust_builder/: pubspec.yaml
rust_builder/android/: build.gradle  settings.gradle
rust_builder/ios/: rust_lib_inputvoice.podspec
rust_builder/linux/: CMakeLists.txt
rust_builder/macos/: rust_lib_inputvoice.podspec
rust_builder/windows/: CMakeLists.txt
scripts/: build-debug.ps1  build-release.ps1  dev-env.ps1  generate-bindings.ps1  measure-idle-perprocess.ps1  measure-idle.ps1  package-env.ps1  test-all.ps1
test/: notifier_test.dart  overlay_screen_test.dart  tray_controller_test.dart
test-fixtures/: generate-fixtures.ps1
windows/: CMakeLists.txt
windows/flutter/: generated_plugins.cmake
windows/runner/: Runner.rc  main.cpp
(+21 files in other folders)
